# alphafold3_custom

./: .gitmodules  CMakeLists.txt  af3_server.py  run_alphafold.py  server.md
include/dssp/: CMakeLists.txt
include/libcifpp/: CMakeLists.txt
include/pybind11_abseil/: CMakeLists.txt
scripts/: README.md  create_af3_input_from_a3ms.py  npz_to_af3_integrated.py
src/alphafold3/data/: msa_features.py
src/alphafold3/model/: msa_pairing.py
